--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "morgan": "^1.8.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "phone": "^2.0.0",
     "pug": "2.0.0-beta11",
     "underscore": "^1.9.0",
     "url": "^0.11.0"
