--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "test": "sh preScript.sh && mocha --timeout 10000"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.1",
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "debug": "~2.6.9",
@@ -19,6 +22,7 @@
     "http-errors": "~1.6.2",
     "joi": "^13.0.1",
     "jsonwebtoken": "^8.2.1",
+    "mocha": "^5.1.1",
     "mongoose": "^4.11.12",
     "morgan": "^1.8.1",
     "passport": "^0.4.0",
